[project]
name = "delhi-car-number-fetcher"
version = "0.2.0"
description = "Fetch fancy car registration numbers from Parivahan with a beautiful CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "selenium>=4.41.0",
    "webdriver-manager>=4.0.2",
    "typer>=0.15.0",
    "inquirerpy>=0.3.4",
    "rich>=13.0.0",
]
